2009-11-01  Joe Mistachkin  <joe@mistachkin.com>

	* doc/loadTk.n: minor fix for htmlhelp target.

2009-11-01  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c, doc/ttk_widget.n:
	Uniform, extensible syntax for [$w identify] methods:
	[$w identify $component $x $y].  All ttk::* widgets support
	[$w identify element $x $y]; widgets with other
	identifiable parts may have additional subcommands.
	* generic/ttk/ttkNotebook.c, doc/ttk_notebook.n:
	Notebook widgets support [$nb identify tab].
	* generic/ttk/ttkPanedwindow.c, doc/ttk_panedwindow.n:
	Panedwindow widgets support [$w identify sash].
	Older 2-argument form [$w identify $x $y] still supported,
	though it does different things depending on the widget.

2009-10-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinFont.c: [Bug 1825353]: This patch reverts a previous
	attempt to fix tiny fonts on Russian Windows. It fixes the
	issue by requesting a suitable fixed font instead of decoding the
	system stock font.

2009-10-26  Don Porter  <dgp@users.sourceforge.net>

	* unix/Makefile.in:     Remove $(PACKAGE).* and prototype from the
	`make distclean` target.  Completes 2009-10-20 commit.

2009-10-25  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixColor.c (TkpGetColor): [Bug 2809525]: Impose a maximum
	X11 color name length so that it becomes impossible to blow things up
	that way.

	* library/text.tcl: [Bug 1854913]: Stop <Delete> actions from ever
	deleting backwards, even when the insertion cursor is "at the end" of
	the text widget.

2009-10-24  Donal K. Fellows  <dkf@users.sf.net>

	* library/button.tcl, unix/tkUnixButton.c (TkpDisplayButton):
	[Patch 1530276]: Make -selectcolor handling work better for both
	checkbuttons and radiobuttons when they don't have indicators.

2009-10-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (CreateWidget, TextEditUndo, TextEditRedo)
	(TextEditCmd, UpdateDirtyFlag): 